--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,15 @@ html,
 body {
   height: 100vh;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
